--- a/src/aura/inputNumber/inputNumber.cmp
+++ b/src/aura/inputNumber/inputNumber.cmp
@@ -1,6 +1,5 @@
 <aura:component access="GLOBAL">
 	<!-- attributes -->
-	<aura:attribute access="GLOBAL" name="id" type="String" />
 	<aura:attribute access="GLOBAL" name="name" type="String" />
 	<aura:attribute access="GLOBAL" name="class" type="String" />
 	<aura:attribute access="GLOBAL" name="value" type="Decimal" />
@@ -17,6 +16,11 @@
 	<aura:attribute access="GLOBAL" name="disabled" type="Boolean" default="false" />
 	<aura:attribute access="GLOBAL" name="readonly" type="Boolean" default="false" />
 	<aura:attribute access="GLOBAL" name="autoselect" type="Boolean" default="true" />
+	<aura:attribute access="GLOBAL" name="label" type="String" />
+	<aura:attribute access="GLOBAL" name="required" type="Boolean" />
+	<aura:attribute access="GLOBAL" name="helpText" type="String" />
+	<aura:attribute access="GLOBAL" name="error" type="String" />
+	<aura:attribute access="GLOBAL" name="errors" type="String[]" />
 	<!-- /attributes -->
 
 	<!-- events -->
@@ -31,21 +35,28 @@
 	<!-- /methods -->
 
 	<!-- component -->
-	<input aura:id="input"
-	       id="{!v.id}"
-	       name="{!v.name}"
-	       class="{!v.class + ' slds-input'}"
-	       type="{#if($Browser.formFactor eq 'DESKTOP', 'text', 'number')}"
-	       accesskey="{!v.accesskey}"
-	       placeholder="{!v.placeholder}"
-	       title="{!v.title}"
-	       tabindex="{!v.tabindex}"
-	       disabled="{!if(v.disabled, 'disabled', '')}"
-	       readonly="{!if(and(not(v.disabled), v.readonly), 'readonly', '')}"
-	       onfocus="{!c.inputFocus}"
-	       onblur="{!c.inputBlur}"
-	       onkeydown="{!c.inputKeyDown}"
-	       onkeypress="{!c.inputKeyPress}"
-	       onchange="{!c.inputChange}" />
+	<c:formElement controlId="{#globalId + '_input'}"
+	               label="{!v.label}"
+	               required="{!v.required}"
+	               helpText="{!v.helpText}"
+	               error="{!v.error}"
+	               errors="{!v.errors}">
+		<input aura:id="input"
+		       id="{#globalId + '_input'}"
+		       name="{!v.name}"
+		       class="{!v.class + ' slds-input'}"
+		       type="{#if($Browser.formFactor eq 'DESKTOP', 'text', 'number')}"
+		       accesskey="{!v.accesskey}"
+		       placeholder="{!v.placeholder}"
+		       title="{!v.title}"
+		       tabindex="{!v.tabindex}"
+		       disabled="{!if(v.disabled, 'disabled', '')}"
+		       readonly="{!if(and(not(v.disabled), v.readonly), 'readonly', '')}"
+		       onfocus="{!c.inputFocus}"
+		       onblur="{!c.inputBlur}"
+		       onkeydown="{!c.inputKeyDown}"
+		       onkeypress="{!c.inputKeyPress}"
+		       onchange="{!c.inputChange}" />
+	</c:formElement>
 	<!-- /component -->
 </aura:component>
