Refactored inputText component to use utils.

--- a/src/aura/inputText/inputText.cmp
+++ b/src/aura/inputText/inputText.cmp
@@ -26,6 +26,7 @@
 	<!-- /events -->
 
 	<!-- handlers -->
+	<aura:handler value="{!this}" name="init" action="{!c.init}" />
 	<aura:handler value="{!v.value}" name="change" action="{!c.valueChange}" />
 	<!-- /handlers -->
 
@@ -35,6 +36,8 @@
 	<!-- /methods -->
 
 	<!-- component -->
+	<c:utils aura:id="utils" />
+
 	<c:formElement controlId="{#globalId + '_input'}"
 	               label="{!v.label}"
 	               required="{!v.required}"
