--- a/src/aura/inputNumber/inputNumber.cmp
+++ b/src/aura/inputNumber/inputNumber.cmp
@@ -30,6 +30,7 @@
 	<!-- /events -->
 
 	<!-- handlers -->
+	<aura:handler value="{!this}" name="init" action="{!c.init}" />
 	<aura:handler value="{!v.value}" name="change" action="{!c.valueChange}" />
 	<!-- /handlers -->
 
@@ -39,6 +40,8 @@
 	<!-- /methods -->
 
 	<!-- component -->
+	<c:utils aura:id="utils" />
+
 	<c:formElement controlId="{#globalId + '_input'}"
 	               label="{!v.label}"
 	               required="{!v.required}"
