--- a/src/aura/inputSelect/inputSelect.cmp
+++ b/src/aura/inputSelect/inputSelect.cmp
@@ -18,6 +18,12 @@
 	<aura:attribute access="GLOBAL" name="helpText" type="String" />
 	<aura:attribute access="GLOBAL" name="error" type="String" />
 	<aura:attribute access="GLOBAL" name="errors" type="String[]" />
+	<aura:attribute access="GLOBAL" name="elementClass" type="String" />
+	<aura:attribute access="GLOBAL" name="labelClass" type="String" />
+	<aura:attribute access="GLOBAL" name="controlClass" type="String" />
+	<aura:attribute access="GLOBAL" name="errorClass" type="String" />
+	<aura:attribute access="GLOBAL" name="left" type="Aura.Component[]" />
+	<aura:attribute access="GLOBAL" name="right" type="Aura.Component[]" />
 
 	<aura:attribute access="PRIVATE" name="localOptions" type="Object[]" />
 	<!-- /attributes -->
@@ -43,12 +49,18 @@
 	<!-- component -->
 	<c:utils aura:id="utils" />
 
-	<c:formElement controlId="{#globalId + '_input'}"
+	<c:formElement class="{!v.elementClass}"
+	               labelClass="{!v.labelClass}"
+	               controlClass="{!v.controlClass}"
+	               errorClass="{!v.errorClass}"
+	               controlId="{#globalId + '_input'}"
 	               label="{!v.label}"
 	               required="{!v.required}"
 	               helpText="{!v.helpText}"
 	               error="{!v.error}"
 	               errors="{!v.errors}">
+		{!v.left}
+
 		<div aura:id="container"
 		     class="{!v.containerClass + if(v.editable, ' is-editable', '') + ' slds-select_container'}"
 		     onfocusin="{!c.containerFocusIn}"
@@ -97,6 +109,8 @@
 				</aura:set>
 			</aura:if>
 		</div>
+
+		{!v.right}
 	</c:formElement>
 	<!-- /component -->
 </aura:component>
