--- a/src/aura/inputText/inputText.cmp
+++ b/src/aura/inputText/inputText.cmp
@@ -17,6 +17,12 @@
 	<aura:attribute access="GLOBAL" name="helpText" type="String" />
 	<aura:attribute access="GLOBAL" name="error" type="String" />
 	<aura:attribute access="GLOBAL" name="errors" type="String[]" />
+	<aura:attribute access="GLOBAL" name="elementClass" type="String" />
+	<aura:attribute access="GLOBAL" name="labelClass" type="String" />
+	<aura:attribute access="GLOBAL" name="controlClass" type="String" />
+	<aura:attribute access="GLOBAL" name="errorClass" type="String" />
+	<aura:attribute access="GLOBAL" name="left" type="Aura.Component[]" />
+	<aura:attribute access="GLOBAL" name="right" type="Aura.Component[]" />
 	<!-- /attributes -->
 
 	<!-- events -->
@@ -38,12 +44,18 @@
 	<!-- component -->
 	<c:utils aura:id="utils" />
 
-	<c:formElement controlId="{#globalId + '_input'}"
+	<c:formElement class="{!v.elementClass}"
+	               labelClass="{!v.labelClass}"
+	               controlClass="{!v.controlClass}"
+	               errorClass="{!v.errorClass}"
+	               controlId="{#globalId + '_input'}"
 	               label="{!v.label}"
 	               required="{!v.required}"
 	               helpText="{!v.helpText}"
 	               error="{!v.error}"
 	               errors="{!v.errors}">
+		{!v.left}
+
 		<input aura:id="input"
 		       id="{#globalId + '_input'}"
 		       name="{!v.name}"
@@ -59,6 +71,8 @@
 		       onfocus="{!c.inputFocus}"
 		       onblur="{!c.inputBlur}"
 		       onchange="{!c.inputChange}" />
+
+		{!v.right}
 	</c:formElement>
 	<!-- /component -->
 </aura:component>
