Added inputNumberBehavior support to the inputSelect component.

--- a/src/aura/inputSelect/inputSelect.cmp
+++ b/src/aura/inputSelect/inputSelect.cmp
@@ -13,6 +13,12 @@
 	<aura:attribute access="GLOBAL" name="editable" type="Boolean" default="false" />
 	<aura:attribute access="GLOBAL" name="autotrim" type="Boolean" default="true" />
 	<aura:attribute access="GLOBAL" name="autoselect" type="Boolean" default="true" />
+	<aura:attribute access="GLOBAL" name="type" type="String" default="text" />
+	<aura:attribute access="GLOBAL" name="min" type="Decimal" />
+	<aura:attribute access="GLOBAL" name="max" type="Decimal" />
+	<aura:attribute access="GLOBAL" name="precision" type="Integer" />
+	<aura:attribute access="GLOBAL" name="scale" type="Integer" />
+	<aura:attribute access="GLOBAL" name="nillable" type="Boolean" default="true" />
 	<aura:attribute access="GLOBAL" name="label" type="String" />
 	<aura:attribute access="GLOBAL" name="required" type="Boolean" />
 	<aura:attribute access="GLOBAL" name="helpText" type="String" />
@@ -47,6 +53,14 @@
 
 	<!-- component -->
 	<c:utils aura:id="utils" />
+
+	<c:inputNumberBehavior aura:id="numberInputBehavior"
+	                       min="{!v.min}"
+	                       max="{!v.max}"
+	                       precision="{!v.precision}"
+	                       scale="{!v.scale}"
+	                       nillable="{!v.nillable}"
+	                       autoselect="{!v.autoselect}" />
 
 	<c:formElement class="{!v.elementClass}"
 	               labelClass="{!v.labelClass}"
