Added disabled and readonly attributes to inputNumberBehavior component.

--- a/src/aura/inputNumber/inputNumber.cmp
+++ b/src/aura/inputNumber/inputNumber.cmp
@@ -54,7 +54,9 @@
 	                       precision="{!v.precision}"
 	                       scale="{!v.scale}"
 	                       nillable="{!v.nillable}"
-	                       autoselect="{!v.autoselect}" />
+	                       autoselect="{!v.autoselect}"
+	                       disabled="{!v.disabled}"
+	                       readonly="{!v.readonly}" />
 
 	<c:formElement class="{!v.elementClass}"
 	               labelClass="{!v.labelClass}"
