--- a/src/aura/inputNumberBehavior/inputNumberBehavior.cmp
+++ b/src/aura/inputNumberBehavior/inputNumberBehavior.cmp
@@ -7,6 +7,8 @@
 	<aura:attribute access="GLOBAL" name="scale" type="Integer" />
 	<aura:attribute access="GLOBAL" name="nillable" type="Boolean" default="true" />
 	<aura:attribute access="GLOBAL" name="autoselect" type="Boolean" default="true" />
+	<aura:attribute access="GLOBAL" name="disabled" type="Boolean" default="false" />
+	<aura:attribute access="GLOBAL" name="readonly" type="Boolean" default="false" />
 	<!-- /attributes -->
 
 	<!-- handlers -->
