Added oninput event handler to update component value as user input changes, in real-time.

--- a/src/aura/inputSelect/inputSelect.cmp
+++ b/src/aura/inputSelect/inputSelect.cmp
@@ -30,6 +30,7 @@
 	<aura:attribute access="GLOBAL" name="controlClass" type="String" />
 	<aura:attribute access="GLOBAL" name="errorClass" type="String" />
 
+	<aura:attribute access="PRIVATE" name="oldValue" type="String" />
 	<aura:attribute access="PRIVATE" name="localOptions" type="Object[]" />
 	<!-- /attributes -->
 
@@ -93,6 +94,7 @@
 				       onblur="{!c.inputBlur}"
 				       onkeydown="{!c.inputKeyDown}"
 				       onkeypress="{!c.inputKeyPress}"
+				       oninput="{!c.inputInput}"
 				       onchange="{!c.inputChange}" />
 
 				<select aura:id="select"
